package de.os.dehaar.dokos.api.entity.util

enum class Team {
    RE,
    KONTRA
}